<resources>
    <string name="app_name">Content Provider App</string>
    <string name="no_contacts">No Contacts on Device</string>
    <string name="retrieve">Retrieve</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="crud">CRUD Operations</string>
    <string name="enter_name">Enter contact name</string>
    <string name="enter_old_name">Enter name to be updated</string>
    <string name="enter_new_name">Enter updated name</string>
    <string name="op_failed">Operation Failed. Please try again</string>
    <string name="op_success">Operation Success!</string>
    <string name="dne">Contact does not exist</string>
    <string name="already_exists">Contact already exists. Please specify a different name</string>
</resources>